DOC-2024: available-toolbar-buttons.adoc
Added entry for Accordion.

--- a/modules/ROOT/pages/available-toolbar-buttons.adoc
+++ b/modules/ROOT/pages/available-toolbar-buttons.adoc
@@ -25,6 +25,11 @@ include::partial$toolbar-button-ids/core-toolbar-buttons.adoc[]
 :plugincode: a11ychecker
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 
+:plugincategory: opensource
+:pluginname: Accordion
+:plugincode: accordion
+include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
+
 :plugincategory: premium
 :pluginname: Advanced Code Editor
 :plugincode: advcode
