--- a/modules/ROOT/pages/available-menu-items.adoc
+++ b/modules/ROOT/pages/available-menu-items.adoc
@@ -25,6 +25,11 @@ include::partial$menu-item-ids/core-menu-items.adoc[]
 :plugincode: a11ychecker
 include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 
+:plugincategory: opensource
+:pluginname: Accordion
+:plugincode: accordion
+include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
+
 :plugincategory: premium
 :pluginname: Advanced Code Editor
 :plugincode: advcode
