DOC-2024: accordion-cmds.adoc
Typo correction: s/state?/state/.

--- a/modules/ROOT/partials/commands/accordion-cmds.adoc
+++ b/modules/ROOT/partials/commands/accordion-cmds.adoc
@@ -3,7 +3,7 @@
 |Name |Arguments |Description
 |InsertAccordion |none | Inserts an accordion element at the current position.
 |ToggleAccordion |`+true+` `+false+` optional `+state+` |Toggles an accordion’s state. Uses the optional `+state+` variable to determine the current state.
-|ToggleAllAccordions |`+true+` `+false+` optional `+state?+` |Toggles the state of all accordions in the current document. Uses the optional `+state+` variable to determine the current state.
+|ToggleAllAccordions |`+true+` `+false+` optional `+state+` |Toggles the state of all accordions in the current document. Uses the optional `+state+` variable to determine the current state.
 |RemoveAccordion |none |Removes an accordion at the current position.
 |===
 
