--- a/modules/ROOT/partials/configuration/details_serialized_state.adoc
+++ b/modules/ROOT/partials/configuration/details_serialized_state.adoc
@@ -41,7 +41,7 @@ tinymce.init({
 ----
 
 NOTE
-.Accordion plugin not required
+//.Accordion plugin not required
 ====
 The option does not require the xref:accordion.adoc[Accordion] plugin be loaded to come into effect.
 
