--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -65,14 +65,13 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 {productname} 6.5 also incorporates the following changes:
 
-=== `aria-activedescendant` attribute for `Typeahead` input component is updated to the menu item that is highlighted.
-//#TINY-9280
+=== Elements in the Insert → Link… dialog did not allow screen readers to announce listed items.
 
-In previous versions of {productname}, the Link Combobox screen reader feature lacked the capability to announce items within the dropdown. This meant that when users relied on screen readers to navigate through the dropdown list in the URL input combo box within the link dialog, there were no auditory notifications for the listed items.
+For example, the first UI element in the {productname} *Insert → Link…* dialog is a text-entry field labelled *URL*. When this element is navigated to using a screen reader, it is announced as a combobox and pressing the down arrow opens the combobox and presents available options.
 
-As a consequence, this significantly reduced the accessibility of the combo box for users that relying on screen readers.
+In previous versions of {productname}, however, none of these available items were announced by the screen reader as they were selected, making these items effectively invisible to screen reader users.
 
-To address this issue, a fix was implemented to enable screen readers to announce the highlighted item within the dropdown. With this improvement, when users navigate through the dropdown, the screen reader will now audibly announce the value of the item currently highlighted.
+With this update, the {productname} *Insert → Link…* dialog has been updated to properly support screen readers. When the URL combo box is opened, for example, all listed items are now announced by screen readers, as expected.
 
 [[bug-fixes]]
 == Bug fixes
