DOC-2024: accordion-toolbar-buttons.adoc
Added `accordiontoggle` and `accordionremove` to toolbar list.

--- a/modules/ROOT/partials/toolbar-button-ids/accordion-toolbar-buttons.adoc
+++ b/modules/ROOT/partials/toolbar-button-ids/accordion-toolbar-buttons.adoc
@@ -2,4 +2,6 @@
 |===
 |Toolbar button identifier |Description
 |`+accordion+` |Executes the `InsertAccordion` command, adding an Accordion element at the current location.
+|`+accordiontoggle+` |Executes the `ToggleAccordion` command, reversing the state of the selected Accordion, to open from closed and to closed from open.
+|`+accordionremove+` |Executes the `RemoveAccordion` command, removing the selected Accordion.
 |===
