--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -56,7 +56,7 @@ The following premium plugin has been announced as reaching its end-of-life:
 
 === Real-Time Collaboration
 
-{productname}'s xref:rtc-introduction.adoc[Real-time Collaboration (RTC)] plugin was officially deactivated on December 31, 2023, and is no longer available for purchase.
+{productname}'s xref:rtc-introduction.adoc[Real-time Collaboration (RTC)] plugin will be deactivated on December 31, 2023, and is no longer available for purchase.
 
 [[accompanying-premium-skins-and-icon-packs-changes]]
 == Accompanying Premium Skins and Icon Packs changes
