DOC-1781: list-toolbar-buttons.adoc
Added `listprops` to `lists-toolbar-buttons.adoc`.

--- a/modules/ROOT/partials/toolbar-button-ids/lists-toolbar-buttons.adoc
+++ b/modules/ROOT/partials/toolbar-button-ids/lists-toolbar-buttons.adoc
@@ -2,5 +2,6 @@
 |===
 |Toolbar button identifier |Description
 |`+bullist+` |Formats the current selection as a bullet list.
+|`+listprops+` |Opens the List Properties dialog. Only works on numbered lists.
 |`+numlist+` |Formats the current selection as a numbered list.
 |===
