DOC-1781: lists.adoc
added `listprops` to toolbar configuration of basic setup example.

--- a/modules/ROOT/pages/lists.adoc
+++ b/modules/ROOT/pages/lists.adoc
@@ -16,7 +16,7 @@ The plugin also normalizes list behavior between browsers. Enable it if you have
 tinymce.init({
   selector: 'textarea',  // change this value according to your HTML
   plugins: 'lists',
-  toolbar: 'numlist bullist'
+  toolbar: 'numlist bullist listprops'
 });
 ----
 
