DOC-1781: available-menu-items.adoc
Added Lists to listed plugins.

--- a/modules/ROOT/pages/available-menu-items.adoc
+++ b/modules/ROOT/pages/available-menu-items.adoc
@@ -126,6 +126,11 @@ include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 
 :plugincategory: opensource
+:pluginname: Lists
+:plugincode: lists
+include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
+
+:plugincategory: opensource
 :pluginname: Media
 :plugincode: media
 include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
