--- a/modules/ROOT/partials/configuration/lists_indent_on_tab.adoc
+++ b/modules/ROOT/partials/configuration/lists_indent_on_tab.adoc
@@ -16,7 +16,7 @@ This boolean option allows to disable the indent on tab key functionality. Its d
 tinymce.init({
   selector: 'textarea',  // change this value according to your HTML
   plugins: 'lists',
-  toolbar: 'numlist bullist listprops',
+  toolbar: 'numlist bullist',
   lists_indent_on_tab: false
 });
 ----
