--- a/modules/ROOT/pages/lists.adoc
+++ b/modules/ROOT/pages/lists.adoc
@@ -20,6 +20,22 @@ tinymce.init({
 });
 ----
 
+== Example adding the `listprops` menu item to the Tools menu
+
+The `listprops` xref#menu-items[menu item] opens the List Properties dialog
+
+This dialog only works with numbered lists. The menu item is inactive unless the selection or insertion point are within a numbered list.
+
+[source,js]
+----
+tinymce.init({
+  selector: "textarea",  // change this value according to your HTML
+  plugins: "lists",
+  toolbar: "bullist numlist",
+  menu: {tools: { title: 'Tools', items: 'listprops' }},
+});
+----
+
 == Options
 
 These settings affect the execution of the `+lists+` plugin.
