--- a/modules/ROOT/pages/lists.adoc
+++ b/modules/ROOT/pages/lists.adoc
@@ -22,7 +22,7 @@ tinymce.init({
 
 == Example adding the `listprops` menu item to the Tools menu
 
-The `listprops` xref#menu-items[menu item] opens the List Properties dialog
+The `listprops` xref:#menu-items[menu item] opens the List Properties dialog
 
 This dialog only works with numbered lists. The menu item is inactive unless the selection or insertion point are within a numbered list.
 
