DOC-1781: lists.adoc
Correction for verb-noun number agreement: s/are/is/.

--- a/modules/ROOT/pages/lists.adoc
+++ b/modules/ROOT/pages/lists.adoc
@@ -24,7 +24,7 @@ tinymce.init({
 
 The `listprops` xref:#menu-items[menu item] opens the List Properties dialog
 
-This dialog only works with numbered lists. The menu item is inactive unless the selection or insertion point are within a numbered list.
+This dialog only works with numbered lists. The menu item is inactive unless the selection or insertion point is within a numbered list.
 
 [source,js]
 ----
