--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -49,11 +49,11 @@ This resulted in an inconsistent end-user experience.
 
 For information on the **Merge Tags** plugin, see: xref:mergetags.adoc[Merge Tags].
 
-=== Footnotes 1.0.1
+=== Advanced Templates 1.2.0
 
-The {productname} 6.5 release includes an accompanying release of the **Footnotes** premium plugin.
+The {productname} 6.5 release includes an accompanying release of the **Advanced Templates** premium plugin.
 
-**Footnotes** 1.0.1 includes one fix:
+**Advanced Templates** 1.2.0 includes one fix:
 
 === The insert template button and menu item was not disabled when the selection was in a non-editable context.
 //#TINY-9892
