DOC-2009: Added TINY-9688 to the release notes. (#2782)
* DOC-2009: Added TINY-9688 to the release notes.

* Update modules/ROOT/pages/6.5-release-notes.adoc

Co-authored-by: Andrew Herron <andrew.herron@tiny.cloud>

---------

Co-authored-by: Andrew Herron <andrew.herron@tiny.cloud>

--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -54,6 +54,10 @@ For information on the **Merge Tags** plugin, see: xref:mergetags.adoc[Merge Tag
 
 The following premium plugin has been announced as reaching its end-of-life:
 
+=== Real-Time Collaboration
+
+{productname}'s xref:rtc-introduction.adoc[Real-time Collaboration (RTC)] plugin will be deactivated on December 31, 2023, and is no longer available for purchase.
+
 [[accompanying-premium-skins-and-icon-packs-changes]]
 == Accompanying Premium Skins and Icon Packs changes
 
