--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -30,6 +30,25 @@
 
 The following premium plugin updates were released alongside {productname} 6.5.
 
+=== Advanced Templates 1.2.0
+
+The {productname} 6.5 release includes an accompanying release of the **Advanced Templates** premium plugin.
+
+**Advanced Templates** 1.2.0 includes one fix:
+
+=== A selected tree component template item did not stay highlighted when the Templates dialog re-rendered.
+//#TINY-9770
+
+In previous versions of {productname}, a selected tree component template item would lose its highlight when the Advanced Template dialog was re-rendered after the template list updated.
+
+This occured when a user renamed a selected template item in the tree component. As a consequence, the user could not identify the currently selected item in the tree.
+
+In {productname} 6.5, the problem was addressed by utilizing the new `defaultSelectedId` configuration property from the xref:dialog-components.adoc#tree[tree component] API.
+
+As a result, the currently previewed template is now correctly highlighted in the tree component, as expected.
+
+For information on the **Advanced Templates** plugin, see: xref:advanced-templates.adoc[Advanced Templates].
+
 === Merge Tags 1.3.0
 
 The {productname} 6.5 release includes an accompanying release of the **Merge Tags** premium plugin.
@@ -57,6 +76,7 @@ As a consequence the *Merge tags* toolbar button and menu item appeared enabled,
 A fix was implemented in {productname} 6.5. {productname} now checks if the user’s current selection is within an element with a `contenteditable="false"` attribute set. If it is, the *Merge tags* toolbar button and menu item are disabled, as expected.
 
 For information on the **Merge Tags** plugin, see: xref:mergetags.adoc[Merge Tags].
+
 
 [[accompanying-premium-plugin-end-of-life-announcement]]
 == Accompanying Premium Plugin end-of-life announcement
