--- a/modules/ROOT/pages/6.5-release-notes.adoc
+++ b/modules/ROOT/pages/6.5-release-notes.adoc
@@ -74,7 +74,7 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 === Closing a dialog would scroll down the document in Safari on macOS. 
 //#TINY-9148
 
-In Safari running on macOS, when a dialog was closed by clicking outside the dialog, a bug caused the browser to scroll the active element and scroll down.
+In Safari running on macOS, when a dialog was closed by clicking outside the dialog, a bug caused the browser to select the active element and scroll down.
 
 This caused the browser to scroll the viewport to the bottom of the dialog after the dialog closed.
 
